# hopfield-parallel

./: .gitignore  hopfield_colab.ipynb
hopfield-cuda/: meson.build
hopfield-cuda/include/: hopfield_network.h  hopfield_pattern.h  hopfield_retrieve.h  util.h
hopfield-cuda/src/: hopfield_network.c  hopfield_pattern.c  hopfield_retrieve.c  hopfield_retrieve.cu  main.c  util.c
hopfield-python/: hopfield_notebook.ipynb
hopfield-python/hopfield_python/: __init__.py  hopfield.py
